<resources>
    <string name="app_name">NotesApp</string>
    <string name="notes">Notes</string>
    <string name="notes_title">Notes Title</string>
    <string name="notes_sub_title">Notes Sub Title</string>
    <string name="note_description">Write Note Here…</string>
    <string name="web_url">Enter Web Url</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="storage_permission_text">This app needs access to your storage.</string>
    <string name="search">Search your notes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete_note">Delete Note</string>
    <string name="add_web_link">Add Web Link</string>
    <string name="http">http://</string>
    <string name="pick_color">Pick Color</string>
    <string name="add_image">Add Image</string>
    <string name="saved">Saved!</string>
</resources>