<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="isLayoutImage"
            type="Boolean" />

        <variable
            name="isLayoutWebLink"
            type="Boolean" />

        <variable
            name="isLayoutEditWebLink"
            type="Boolean" />


    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.CreateNoteFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black_dark"
            android:paddingHorizontal="@dimen/_16sdp">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/layoutMore">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <!-- icBack -->
                    <ImageView
                        android:id="@+id/icBack"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:src="@drawable/ic_arrow_back"
                        app:tint="@color/white_light"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <!-- icDone -->
                    <ImageView
                        android:id="@+id/icDone"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:src="@drawable/ic_done"
                        app:tint="@color/white_light"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <!-- colorView -->
                    <View
                        android:id="@+id/colorView"
                        android:layout_width="@dimen/_16sdp"
                        android:layout_height="0dp"
                        app:layout_constraintTop_toTopOf="@+id/etNoteTitle"
                        app:layout_constraintBottom_toBottomOf="@+id/etNoteTitle"
                        app:layout_constraintStart_toStartOf="parent"/>

                    <!-- etNoteTitle -->
                    <EditText
                        android:id="@+id/etNoteTitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/shape_et"
                        android:backgroundTint="@color/circle_body"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:inputType="text"
                        android:fontFamily="@font/manrope_bold"
                        android:hint="@string/notes_title"
                        android:textSize="@dimen/_15ssp"
                        android:textColor="@color/white_light"
                        android:textColorHint="@color/white_light"
                        android:paddingVertical="@dimen/_12sdp"
                        android:paddingStart="@dimen/_14sdp"
                        android:paddingEnd="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_24sdp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/colorView"
                        app:layout_constraintTop_toBottomOf="@id/icBack" />

                    <!-- tvDateTime -->
                    <TextView
                        android:id="@+id/tvDateTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:fontFamily="@font/manrope_bold"
                        android:text="Edited 16:32 Jan 29"
                        android:textColor="@color/white_light_extra"
                        android:textSize="@dimen/_8ssp"
                        android:layout_marginHorizontal="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/etNoteTitle" />

                    <!-- imgNote -->
                    <com.makeramen.roundedimageview.RoundedImageView
                        android:id="@+id/imgNote"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:scaleType="fitXY"
                        android:visibility="@{isLayoutImage? View.VISIBLE: View.GONE, default = gone}"
                        app:riv_corner_radius="@dimen/_6sdp"
                        android:layout_marginTop="@dimen/_20sdp"
                        app:layout_constraintTop_toBottomOf="@id/tvDateTime"/>

                    <!-- icDeleteImageNote -->
                    <ImageView
                        android:id="@+id/icDeleteImageNote"
                        android:layout_width="@dimen/_16sdp"
                        android:layout_height="@dimen/_16sdp"
                        android:src="@drawable/ic_cancel"
                        android:visibility="@{isLayoutImage? View.VISIBLE: View.GONE, default = gone}"
                        android:layout_marginTop="@dimen/_8sdp"
                        app:layout_constraintTop_toBottomOf="@id/imgNote"
                        app:layout_constraintEnd_toEndOf="@+id/imgNote"
                        app:layout_constraintStart_toStartOf="@+id/imgNote"/>

                    <!-- layoutWebLink -->
                    <FrameLayout
                        android:id="@+id/layoutWebLink"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:visibility="@{isLayoutWebLink? View.VISIBLE: View.GONE, default = gone}"
                        app:layout_constraintTop_toBottomOf="@id/icDeleteImageNote"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent">

                        <!-- layoutEditWebLink -->
                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/layoutEditWebLink"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/shape_et_2"
                            android:backgroundTint="@color/circle_body"
                            android:paddingVertical="@dimen/_16sdp"
                            android:visibility="@{isLayoutEditWebLink? View.VISIBLE: View.GONE, default = gone}"
                            app:layout_constraintTop_toBottomOf="@id/icDeleteImageNote"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent">

                            <EditText
                                android:id="@+id/etWebLink"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:background="@null"
                                android:inputType="textMultiLine"
                                android:fontFamily="@font/manrope_regular"
                                android:hint="@string/http"
                                android:text="@string/http"
                                android:textColor="@color/white_light"
                                android:textColorHint="@color/circle_body"
                                android:textSize="@dimen/_12ssp"
                                android:paddingVertical="@dimen/_10sdp"
                                android:layout_marginHorizontal="@dimen/_8sdp"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintEnd_toStartOf="@+id/icDeleteWebLink"/>

                            <ImageView
                                android:id="@+id/icDeleteWebLink"
                                android:layout_width="@dimen/_16sdp"
                                android:layout_height="@dimen/_16sdp"
                                android:src="@drawable/ic_cancel"
                                android:layout_marginEnd="@dimen/_8sdp"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"/>

                            <Button
                                android:id="@+id/btnCancelEditWebLink"
                                android:layout_width="wrap_content"
                                android:layout_height="@dimen/_30sdp"
                                android:background="@drawable/shape_bar"
                                android:backgroundTint="@color/text_color"
                                android:fontFamily="@font/manrope_semi_bold"
                                android:text="@string/cancel"
                                android:textAllCaps="false"
                                android:textColor="@color/white_light"
                                android:textSize="@dimen/_11ssp"
                                android:layout_marginTop="@dimen/_10sdp"
                                android:layout_marginEnd="@dimen/_8sdp"
                                app:layout_constraintEnd_toStartOf="@+id/btnOkEditWebLink"
                                app:layout_constraintTop_toBottomOf="@+id/etWebLink"/>

                            <Button
                                android:id="@+id/btnOkEditWebLink"
                                android:layout_width="wrap_content"
                                android:layout_height="@dimen/_30sdp"
                                android:background="@drawable/shape_bar"
                                android:backgroundTint="@color/blue"
                                android:fontFamily="@font/manrope_semi_bold"
                                android:text="@string/ok"
                                android:textAllCaps="false"
                                android:textColor="@color/white_light"
                                android:textSize="@dimen/_11ssp"
                                android:layout_marginTop="@dimen/_10sdp"
                                android:layout_marginEnd="@dimen/_8sdp"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/etWebLink"/>

                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <!-- tvShowWebLink -->
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:weightSum="1"
                            android:orientation="horizontal"
                            android:gravity="center_vertical"
                            android:visibility="@{isLayoutEditWebLink? View.GONE: View.VISIBLE, default = gone}"
                            app:layout_constraintTop_toBottomOf="@id/icDeleteImageNote">

                            <TextView
                                android:id="@+id/tvWebLink"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:autoLink="web"
                                android:textColorLink="@color/url_color"
                                android:ellipsize="end"
                                android:fontFamily="@font/manrope_bold"
                                android:text="http://www.google.com"
                                android:textColor="@color/white_light_extra"
                                android:textSize="@dimen/_12ssp"
                                android:paddingVertical="@dimen/_10sdp"
                                android:layout_marginStart="@dimen/_6sdp"/>

                            <ImageView
                                android:id="@+id/icEditWebLink"
                                android:layout_width="@dimen/_16sdp"
                                android:layout_height="@dimen/_16sdp"
                                android:src="@drawable/ic_edit"
                                app:tint="@color/white_light_extra"
                                android:layout_marginHorizontal="@dimen/_8sdp"/>

                        </LinearLayout>

                    </FrameLayout>

                    <!-- etNoteDescription -->
                    <EditText
                        android:id="@+id/etNoteDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:inputType="textMultiLine"
                        android:fontFamily="@font/manrope_regular"
                        android:hint="@string/note_description"
                        android:gravity="start"
                        android:textColor="@color/white_light"
                        android:textColorHint="@color/white_light_extra"
                        android:textSize="@dimen/_12ssp"
                        android:paddingVertical="@dimen/_4sdp"
                        android:paddingHorizontal="@dimen/_4sdp"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:layout_marginBottom="@dimen/_8sdp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/layoutWebLink"
                        app:layout_constraintBottom_toBottomOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.core.widget.NestedScrollView>

            <!-- layoutMore -->
            <FrameLayout
                android:id="@+id/layoutMore"
                android:layout_width="@dimen/_75sdp"
                android:layout_height="@dimen/_40sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <ImageView
                    android:id="@+id/icMore"
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_2sdp"
                    android:layout_gravity="center"
                    android:src="@drawable/shape_bar"/>
            </FrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>



    </FrameLayout>
</layout>